2007-11-04  Paul Smith  <psmith@gnu.org>

	* doc/make.texi: Convert references to "commands", "command
	lines", and "command script" to "recipe".
	* NEWS: Ditto.
	* commands.c, file.c, job.c, remake.c, read.c, variable.c, main.c:
	Ditto.

2007-10-27  Bruno Haible  <bruno@clisp.org>

	* remake.c (f_mtime): Print time difference values between 100 and
	ULONG_MAX in fixed-point notation rather than in exponention notation.

2007-10-12  Eli Zaretskii  <eliz@gnu.org>

	* variable.c (do_variable_definition): Allow $(SHELL) to expand to
	a more complex value than a simple shell: if it's not a default
	shell now then expand it and see if is a default shell then.

2007-10-10  Eli Zaretskii  <eliz@gnu.org>

	* dir.c (find_directory) [WINDOWS32]: Remove trailing slashes from
	pathnames, with const strings.
	* build_w32.bat [WINDOWS32]: If no config.h.W32 exists, create one
	from the template (used for building from CVS, not a dist).

2007-10-10  Paul Smith  <psmith@gnu.org>

	* make.h: Add a prototype for w32_kill() (change suggested by
	Yongwei Wu <wuyongwei@gmail.com>).

2007-09-21  Eli Zaretskii  <eliz@gnu.org>

	* w32/pathstuff.c (convert_Path_to_windows32): Handle quoted
	directories in Path.

2007-09-12  Paul Smith  <psmith@gnu.org>

	* doc/make.texi: Applied wording cleanups from Savannah patch #6195.
	Provided by Diego Biurrun <diego@biurrun.de>
	(Complex Makefile): Remove .PHONY setting for tar: patch #6196.
	Provided by Diego Biurrun <diego@biurrun.de>

2007-09-11  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (Special Variables): Moved this into the "How to
	Use Variables" chapter.  Added a table entry for .RECIPEPREFIX.
	(MAKEFILE_LIST) No longer a section; this was added into the
	"Special Variables" section.
	(Rule Introduction): Reference .RECIPEPREFIX.
	(Simple Makefile): Ditto.
	(Rule Syntax): Ditto.
	(Command Syntax): Ditto.
	(Error Messages): Ditto.

2007-09-10  Paul Smith  <psmith@gnu.org>

	* commands.c (print_commands): Don't print an extra line in the