@@ -1,3 +1,9 @@
+2007-12-22  Eli Zaretskii  <eliz@gnu.org>
+
+	* vpath.c (construct_vpath_list) [HAVE_DOS_PATHS]: Support VPATH
+	values that use `:' in drive letters, when PATH_SEPARATOR_CHAR is
+	also `:'.
+
 2007-11-04  Paul Smith  <psmith@gnu.org>
 
 	* doc/make.texi: Convert references to "commands", "command
